# nix-dotfiles

./: .envrc  .gitconfig  .gitignore  .gitmodules  .pre-commit-config.yaml  .typos.toml  .vimrc  .yamllint  .zshrc  .zshrc#hostname.wittano-laptop  Makefile  Pipfile  README.md  configuration.nix  dev-shell.nix  flake.nix  mypy.ini  nixos-configs.nix  overlays.nix  shell.nix  shells.nix  templates.nix
.config/: redshift.conf  sxhkd
.doom.d/: init.el  packages.el
.doom.d##hostname.wittano-pc/: custom.el
blogs/: blogs.opml  feedbro-subscriptions-20220115-104014.opml  feedbro-subscriptions-20220118-225331.opml
config/: .gitmodules  redshift.conf
dev/: go-shell.nix  python-shell.nix
dotfiles/xmonad/: build  config.hs  xmobarrc  xmonad.cabal  xmonad.hs
dotfiles/xmonad/src/: Keyboard.hs  Layout.hs  Main  Main.hs  Startup.hs  Workspace.hs  Xmobar.hs
home/: fish.nix  home.nix
home-manager/: alacritty.nix  autostart.nix  betterlockscreen.nix  default.nix  discord.nix  dunst.nix  feh.nix  file-roller.nix  fish.nix  games.nix  ghostty.nix  git.nix  gtk.nix  ide.nix  joplin.nix  kitty.nix  krusader.nix  lutris.nix  matrix.nix  nemo.nix  neovim.nix  nitrogen.nix  picom.nix  polybar.nix  pomodoro.nix  programming.nix  qbittorrent.nix  qt.nix  ranger.nix  redshift.nix  rofi.nix  signal.nix  spotify.nix  stalonetray.nix  telegram.nix  thunderbird.nix  tmux.nix  todoist.nix  vivaldi.nix  work.nix  (+1 more)
hosts/: common-home-manager.nix  common.nix  general.nix
lib/: apps.nix  autostart.nix  bash.nix  commands.nix  default.nix  desktop.nix  dotfiles.nix  hosts.nix  import.nix  imports.nix  link.nix  mapper.nix  nix.nix  path.nix  pkgs.nix  string.nix  strings.nix
modules/: agenix.nix  configuration.nix  default.nix  secrets.nix  utils.nix
nixos/: default.nix  secrets.nix  specialisation.nix
nixos/desktop/xmonad/: build  default.nix  witomonad.cabal  xmobarrc  xmobarrc-laptop-latte  xmobarrc-latte  xmobarrc-macchiato  xmonad.cabal
nixos/desktop/xmonad/src/: Const.hs  Keyboard.hs  Layout.hs  Main.hs  Startup.hs  Workspace.hs  Xmobar.hs
os/: configuration.nix  nix.nix  (+1 more)
(+501 files in other folders)
